--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,4 +1,4 @@
-.header
+.navbar
   background-color: #fff
   &-top
     display: flex
@@ -6,9 +6,30 @@
     justify-content: space-between
     padding-top: 40px
     padding-bottom: 40px
+    &__menu-button
+      display: none  
   &__search
     margin-right: auto
-    margin-left: 108px  
+    margin-left: 108px
+  &-bottom
+    background-color: $dark
+  &-menu
+    list-style: none
+    margin: 0
+    padding: 31px 0
+    display: flex
+    align-items: center
+    justify-content: space-between
+    
+    color: $light
+    &__link
+      color: inherit  
+      text-decoration: none
+      text-transform: uppercase
+      font-size: 14px
+      line-height: 18px
+.logo
+  width: 177px      
 .search
   display: flex
   position: relative
@@ -23,11 +44,11 @@
     background-color: #F5FAFE
     border: none
     outline: none
-    font-size: 12px 
+    font-size: 12px
     line-height: 15px
     color: $text-color
   &__button
-    position: absolute  
+    position: absolute
     top: 0
     right: 0
     height: 100%
@@ -37,7 +58,7 @@
 .user
   display: flex
   align-items: center
-  text-decoration: none  
+  text-decoration: none
   &__avatar
     width: 40px
     height: 40px
@@ -48,4 +69,3 @@
     font-size: 14px
     line-height: 18px
     color: $text-color
-      
