--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,11 +1,11 @@
 @media ( max-width: 1200px )
   .container
     max-width: 960px
-@media ( max-width: 992px )    
+@media ( max-width: 992px )
   .container
     max-width: 700px
   .logo
-    width: 132px   
+    width: 132px
   .navbar
     &-top
       padding-top: 30px
@@ -18,32 +18,80 @@
     &-menu
       padding-top: 22px
       padding-bottom: 22px
-      &__link 
+      &__link
         font-size: 12px
-        line-height: 15px        
-@media ( max-width: 768px )       
+        line-height: 15px
+@media ( max-width: 767px )
   .container
-    max-width: 576px  
-    width: 92% 
+    max-width: 576px
+    width: 92%
   .navbar
     &-menu, &__search, &__user
-      display: none  
+      display: none
   .menu
-    &-button 
-      display: flex     
+    &-button
+      display: flex
+      padding-bottom: 1px
       width: 16px
-      height: 11px 
+      height: 11px
       align-items: center
       justify-content: space-between
-      flex-direction: column 
+      flex-direction: column
       border: none
       background-color: #fff
       cursor: pointer
       &__line
         width: 16px
         height: 1px
+        margin-top: -2px
         background-color: $text-color
+  .hotel
+    &-description
+      width: 85% 
+    &-wrapper
+      justify-content: space-between
+    &-name
+      flex-basis: 100%  
+    &-info
+      &__text
+        width: 100%
+      &__name
+        margin-top: 10px
+        margin-bottom: 0  
+      &__rating
+        display: none
+      &__offer
+        order: -1
+        margin-left: 0  
+  .stars
+    flex-basis: auto           
 @media ( max-width: 576px )
   .logo
     width: 99px
-  
+  .hotel
+    &-description
+      width: 50%  
+@media ( max-width: 501px )  
+  .hotel
+    &-description
+      width: 55% 
+@media ( max-width: 456px ) 
+  .hotel
+    &-description
+      width: 67%     
+@media ( max-width: 375px ) 
+  .hotel
+    &-description
+      width: 80%        
+@media ( max-width: 320px )
+  .container
+    max-width: 576px
+    width: 87.5%
+  .navbar
+    &-top
+      padding-top: 23px
+      padding-bottom: 28px 
+      align-items: end
+  .hotel
+    &-description
+      width: 85%    
