--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,6 +1,16 @@
 @media ( max-width: 1200px )
   .container
     max-width: 960px
+  .hotel
+    &-slider
+      width: 590px  
+  .hotel
+    &-slider    
+      &__img
+        width: 100%
+        height: 100%
+        object-fit: cover
+
 @media ( max-width: 992px )
   .container
     max-width: 700px
@@ -21,6 +31,18 @@
       &__link
         font-size: 12px
         line-height: 15px
+  .hotel
+    &-grid
+      flex-direction: column
+    &-slider
+      width: 100%      
+      margin-bottom: 30px
+    &-right
+      flex-direction: row  
+  .booking
+    width: 340px
+  .map
+    width: 340px          
 @media ( max-width: 767px )
   .container
     max-width: 576px
@@ -64,13 +86,29 @@
         order: -1
         margin-left: 0  
   .stars
-    flex-basis: auto           
+    flex-basis: auto 
+  .swiper-wrapper
+    height: 350px  
+  .hotel
+    &-right
+      flex-direction: column
+      min-height: 450px
+  .booking
+    width: 100%
+  .map
+    width: 100%                  
 @media ( max-width: 576px )
   .logo
     width: 99px
   .hotel
     &-description
       width: 50%  
+  .hotel
+    &-slider
+      height: 250px   
+  .hotel
+    &__slider
+      margin-bottom: 20px      
 @media ( max-width: 501px )  
   .hotel
     &-description
@@ -95,3 +133,4 @@
   .hotel
     &-description
       width: 85%    
+      
