--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -27,6 +27,59 @@
     font-size: 12px
     line-height: 15px
     font-style: normal
+  &-grid
+    display: flex  
+    justify-content: space-between
+    
+  &-right
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+     
+  &__slider
+    margin-left: 0
+    margin-right: 30px
+  &__img
+    width: 100%
+    height: 100%
+    object-fit: cover
+  &-slider
+    width: 728px
+    height: 100%
+    position: relative
+    border-radius: 8px
+    &:after
+      content: ''
+      position: absolute
+      width: 100%
+      height: 100%
+      top: 0
+      bottom: 0
+      right: 0
+      left: 0
+      background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
+      z-index: 10
+    &__button
+      position: absolute
+      z-index: 99
+      top: 50%
+      transform: translateY(-50%)
+      width: 30px
+      height: 30px
+      border: none
+      cursor: pointer
+      background-repeat: no-repeat
+      background-position: center
+      background-size: 10px
+      background-color: transparent
+      &--next
+        right: 18px
+        background-image: url(../img/arrow-next.svg)
+      &--prev
+        left: 18px
+        background-image: url(../img/arrow-prev.svg)
+.swiper-wrapper
+  height: 450px
 .stars
   flex-basis: 100%
 .offer
@@ -50,42 +103,84 @@
   &__counter
     font-size: 14px
     line-height: 18px
-.swiper 
-  width: 100%
-  height: 450px
-  position: relative
+.booking
+  font-family: 'Nunito', sans-serif 
+  background-color: $dark
+  color: $light
   border-radius: 8px
-  &:after
-    content: ''
-    position: absolute
+  width: 350px
+  min-height: 210px  
+  padding: 29px 29px 26px 26px
+  &__info 
+    display: flex
+    justify-content: space-between
+    margin-bottom: 9px
+  &__price
+    display: flex
+    flex-direction: column  
+  &__start
+    font-weight: 400
+    font-size: 10px
+    line-height: 14px
+  &__pricetag
+    font-style: normal
+    font-weight: 800
+    font-size: 24px
+    line-height: 28.5px
+  &__per-room
+    font-style: normal
+    font-weight: 400
+    font-size: 12px
+    line-height: 16px  
+  &__room
+    margin-top: 4px
+  &__text
+    display: flex
+    align-items: center  
+    justify-content: space-between
+    margin-bottom: 8px
+    font-style: normal
+    font-weight: 400
+    font-size: 12px
+    line-height: 16px 
+  &__description
+    margin-left: 9px  
+  &__call-center  
+    display: flex
+    justify-content: space-between
+    align-items: center
+    margin-bottom: 17px
+  &__heading
+    font-style: normal
+    font-weight: 600
+    font-size: 18px
+    line-height: 25px 
+  &__number
+    display: flex
+    align-items: center
+    justify-content: space-between
+    color: inherit
+    text-decoration: none
+    font-style: normal
+    font-weight: 600
+    font-size: 18px
+    line-height: 25px
+  &__num 
+    margin-left: 8px   
+  &__button
     width: 100%
-    height: 100%
-    top: 0
-    bottom: 0
-    right: 0
-    left: 0
-    background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
-    z-index: 10
-.slider
-  width: 728px
-  &-button
-    position: absolute
-    z-index: 99
-    top: 50%
-    transform: translateY(-50%)
-    width: 30px
-    height: 30px
+    min-height: 45px
+    font-weight: 600
+    font-size: 14px
+    line-height: 19px  
+    border-radius: 4px
+    background-color: $primary
     border: none
+    color: $light
     cursor: pointer
-    background-repeat: no-repeat
-    background-position: center
-    background-size: 10px
-    background-color: transparent 
-    &--next
-      right: 18px
-      background-image: url(../img/arrow-next.svg) 
-      
-    &--prev
-      left: 18px  
-      background-image: url(../img/arrow-prev.svg)
-      
+.map
+  width: 347px
+  height: 213px
+  background-color: #0f0e0e  
+  border-radius: 10px
+  overflow: hidden
