--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -12,7 +12,7 @@
         object-fit: cover
 
 @media ( max-width: 992px )
-  .container
+  .container, .newsletter-wrapper
     max-width: 700px
   .logo
     width: 132px
@@ -97,6 +97,13 @@
     width: 100%
   .map
     width: 100%
+  .newsletter
+    &-wrapper
+      max-width: 576px
+      width: 92%
+      flex-direction: column  
+      align-items: flex-start
+      height: 100%
 @media ( max-width: 576px )
   .logo
     width: 99px
@@ -109,6 +116,12 @@
   .hotel
     &__slider
       margin-bottom: 20px
+  .newsletter
+    padding: 76px 0px 83px 0px
+    &__title
+      margin-bottom: 37px     
+  .subscribe
+    width: 100%    
 @media ( max-width: 501px )
   .hotel
     &-description
