--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -107,11 +107,11 @@
       width: 92%
       flex-direction: column
       align-items: flex-start
-      height: 100%
   .reviews
     &-slider
       &__item
-        padding: 0px 30px 30px
+        min-height: 438px
+        padding: 0px 30px 0px
         &:after, &::before
           display: none
       &__button
@@ -123,7 +123,10 @@
         &--next
           left: 50%
           margin-left: -95px 
-          transform: translate(-50%, 0)          
+          transform: translate(-50%, 0) 
+      &__text
+        margin: 0px 
+        padding: 0px           
 @media ( max-width: 576px )
   .logo
     width: 99px
@@ -142,6 +145,7 @@
       margin-bottom: 37px
   .subscribe
     width: 100%
+  
 @media ( max-width: 501px )
   .hotel
     &-description
@@ -166,3 +170,9 @@
   .hotel
     &-description
       width: 85%
+  .newsletter
+    padding: 76px 0px 83px 0px
+    &__title
+      margin-bottom: 0px    
+    
+
