--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -15,11 +15,9 @@
       flex-direction: column
       align-items: center
       max-width: 731px
-      margin: 45px auto 0px
+      margin: 45px auto 50px
       background-color: #fff  
       border-radius: 8px
-      margin-top: 45px
-      padding: 0px 62px 30px 
       &:before
         position: absolute
         content: ''
@@ -91,5 +89,7 @@
       font-size: 12px
       line-height: 160%
       text-align: justify 
-      max-width: 532px
       margin: auto
+      padding-bottom: 30px
+      padding-right: 99px
+      padding-left: 99px
