--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -91,8 +91,6 @@
         margin-left: 0
   .stars
     flex-basis: auto
-  .swiper-wrapper
-    height: 350px
   .hotel
     &-right
       flex-direction: column
@@ -102,8 +100,11 @@
   .map
     width: 100%
   .newsletter
+    padding: 0
     &-wrapper
+      justify-content: center
       max-width: 576px
+      height: 319px
       width: 92%
       flex-direction: column
       align-items: flex-start
@@ -140,7 +141,7 @@
     &__slider
       margin-bottom: 20px
   .newsletter
-    padding: 76px 0px 83px 0px
+    padding: 0px
     &__title
       margin-bottom: 37px
   .subscribe
@@ -168,11 +169,20 @@
       padding-bottom: 28px
       align-items: end
   .hotel
+    &-slider
+      height: 179px
     &-description
       width: 85%
+  .map
+    height: 173px   
   .newsletter
     padding: 76px 0px 83px 0px
     &__title
-      margin-bottom: 0px    
+      margin-bottom: 37px    
+  .reviews
+    &__title 
+      max-width: 245px
+      font-size: 18px
+      line-height: 23px  
     
 
