--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -93,3 +93,6 @@
       padding-bottom: 30px
       padding-right: 99px
       padding-left: 99px
+    &__slider
+      height: 100%
+      position: relative  
