--- a/css/style.css
+++ b/css/style.css
@@ -1053,6 +1053,11 @@ template {
   padding-left: 99px;
 }
 
+.reviews-slider__slider {
+  height: 100%;
+  position: relative;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
@@ -1186,9 +1191,6 @@ template {
     -ms-flex-preferred-size: auto;
         flex-basis: auto;
   }
-  .swiper-wrapper {
-    height: 350px;
-  }
   .hotel-right {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1202,8 +1204,15 @@ template {
   .map {
     width: 100%;
   }
+  .newsletter {
+    padding: 0;
+  }
   .newsletter-wrapper {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     max-width: 576px;
+    height: 319px;
     width: 92%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1255,7 +1264,7 @@ template {
     margin-bottom: 20px;
   }
   .newsletter {
-    padding: 76px 0px 83px 0px;
+    padding: 0px;
   }
   .newsletter__title {
     margin-bottom: 37px;
@@ -1295,14 +1304,25 @@ template {
         -ms-flex-align: end;
             align-items: end;
   }
+  .hotel-slider {
+    height: 179px;
+  }
   .hotel-description {
     width: 85%;
+  }
+  .map {
+    height: 173px;
   }
   .newsletter {
     padding: 76px 0px 83px 0px;
   }
   .newsletter__title {
-    margin-bottom: 0px;
+    margin-bottom: 37px;
+  }
+  .reviews__title {
+    max-width: 245px;
+    font-size: 18px;
+    line-height: 23px;
   }
 }
 /*# sourceMappingURL=style.css.map */
