--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -20,7 +20,6 @@
     display: flex
     align-items: center
     justify-content: space-between
-    
     color: $light
     &__link
       color: inherit  
@@ -56,6 +55,7 @@
     width: 65px
     border: none
     background-color: $primary
+    padding-top: 6px
 .user
   display: flex
   align-items: center
