--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -23,6 +23,11 @@
     display: flex
     flex-wrap: wrap
     align-items: center
+    &__stars
+      display: flex
+      align-items: center
+      justify-content: flex-start
+      width: 48px
   &-description
     font-size: 12px
     line-height: 15px
