--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -10,6 +10,9 @@
         width: 100%
         height: 100%
         object-fit: cover
+  .card
+    width: 230px
+    height: 230px      
 
 @media ( max-width: 992px )
   .container, .newsletter-wrapper
@@ -91,6 +94,16 @@
       margin-bottom: 49px
       font-size: 30px
       line-height: 38px
+  .activities
+    &-wrapper
+      flex-wrap: wrap
+    &__card
+      margin-bottom: 20px  
+  .card
+    width: 340px
+    height: 255px     
+
+
 @media ( max-width: 767px )
   .container
     max-width: 576px
@@ -172,6 +185,9 @@
       &__text
         margin: 0px
         padding: 0px
+  .card
+    width: 49%
+    height: 255px       
 @media ( max-width: 576px )
   .logo
     width: 99px
@@ -190,6 +206,12 @@
       margin-bottom: 37px
   .subscribe
     width: 100%
+  .activities
+    &-wrapper
+      justify-content: space-evenly
+  .card
+    width: 70%
+    
 
 @media ( max-width: 501px )
   .hotel
@@ -199,6 +221,8 @@
   .hotel
     &-description
       width: 67%
+  .card
+    width: 100%    
 @media ( max-width: 375px )
   .hotel
     &-description
@@ -279,3 +303,12 @@
       font-size: 18px
       line-height: 23px
       margin: 29px auto 42px
+  .activities
+    padding-top: 0px
+    &__title
+      font-size: 18px
+      line-height: 23px    
+  .card
+    width: 100% 
+    &__title
+      max-width: 145px   
