--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -185,6 +185,9 @@
       &__text
         margin: 0px
         padding: 0px
+  .activities
+    padding-top: 40px
+    padding-bottom: 60px      
   .card
     width: 49%
     height: 255px       
@@ -307,7 +310,12 @@
     padding-top: 0px
     &__title
       font-size: 18px
-      line-height: 23px    
+      line-height: 23px 
+      margin-bottom: 36px 
+    &__card
+      margin-bottom: 20px  
+  .reviews
+    padding-bottom: 9px      
   .card
     width: 100% 
     &__title
