create mobile menu

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -12,12 +12,16 @@
         object-fit: cover
   .card
     width: 230px
-    height: 230px      
+    height: 230px
   .footer
+    &-wrapper 
+      grid-template-columns: 20% 20%
+      grid-auto-rows: none
     &__contact
-      &-form 
+      &-details 
         grid-column: span 3
-    
+      &-form
+        grid-column: span 3
 
 @media ( max-width: 992px )
   .container, .newsletter-wrapper
@@ -109,41 +113,84 @@
     height: 255px
   .footer
     &-wrapper
-      grid-template-columns: repeat(6, 1fr)
-      grid-row-gap: 40px 
+      grid-template-columns: 5% 22% 40%
+      grid-gap: 9px
+      grid-row-gap: 40px
     &__input
       flex-basis: 100%
     &__logo
       grid-row: 1 / 2
-      grid-column: span 2  
-      
+      grid-column: span 2
+
     &__social
       &-network
         grid-row: 1 / 2
         grid-column: span 4
         align-self: center
     &__categories
-      grid-row: 2 / 3    
+      grid-row: 2 / 3
       grid-column: span 2
     &__legal
-      grid-column: span 2  
+      grid-column: span 2
     &__additional
-      grid-column: span 2   
+      grid-column: span 2
     &__contact
       &-details
         grid-column: span 5
         grid-row: 3
       &-form
         grid-column: span 5
-        grid-row: 4    
+        grid-row: 4
 
 @media ( max-width: 767px )
+  body
+    padding-top: 70px
   .container
-    max-width: 576px
+    max-width: 700px
     width: 92%
   .navbar
-    &-menu, &__search, &__user
-      display: none
+    &--mobile
+      &_fixed
+        position: fixed
+        left: 0
+        top: 0
+        right: 0
+        z-index: 99
+    &__user, &__search
+      margin-right: 0px
+      &--mobile
+        &_hidden
+          display: none    
+        &_visible
+          display: flex  
+    &__user
+      flex-direction: column
+      justify-content: center      
+    &-bottom
+      display: none 
+      position: fixed
+      left: 0
+      right: 0
+      top: 70px
+      bottom: 0
+      padding-top: 30px
+      &--visible
+        display: block 
+    &-menu
+      max-width: 400px
+      margin: auto
+      flex-direction: column
+      &__item
+        margin-bottom: 20px    
+        &--mobile
+          margin-right: 0px
+          
+          &_visible
+            display: block  
+            margin-bottom: 27px
+        &--mt12
+          margin-top: 12px    
+
   .menu
     &-button
       display: flex
@@ -161,6 +208,12 @@
         height: 1px
         margin-top: -2px
         background-color: $text-color
+  .user
+    &__name
+      &--light
+        color: $light
+        margin-left: 0  
+        margin-top: 10px  
   .hotel
     &-description
       width: 85%
@@ -226,11 +279,37 @@
     height: 255px
   .footer
     &__input
-      flex-basis: 49%  
+      flex-basis: 100%
+    &-wrapper
+      grid-template-columns: 1fr
+    &__logo
+      grid-row: 1
+      grid-column: 1
+    &__social
+      &-network
+        grid-row: 2
+        grid-column: 1
+    &__additional
+      grid-row: 3
+      grid-column: 1
+    &__categories
+      grid-row: 4
+      grid-column: 1
+    &__legal
+      grid-row: 5
+      grid-column: 1
     &__contact
-      &-form 
-        grid-column: span 6  
-    
+      &-details
+        grid-row: 6
+        grid-column: 1
+        max-width: 281px
+      &-form
+        grid-row: 7
+        grid-column: 1
+    &__item
+      &--wid
+        max-width: 268px    
+
 @media ( max-width: 576px )
   .logo
     width: 99px
@@ -254,40 +333,18 @@
       justify-content: space-evenly
   .card
     width: 70%
-  .footer
-    &__input
-      flex-basis: 100%
-    &-wrapper
-      grid-template-columns: 1fr 
-    &__logo
-      grid-row: 1
-      grid-column: 1
-    &__social
-      &-network
-        grid-row: 2
-        grid-column: 1
-    &__additional
-      grid-row: 3
-      grid-column: 1
-    &__categories
-      grid-row: 4
-      grid-column: 1   
-    &__legal
-      grid-row: 5
-      grid-column: 1
-    &__contact
-      &-details
-        grid-row: 6
-        grid-column: 1 
-      &-form  
-        grid-row: 7
-        grid-column: 1             
+  
 
 @media ( max-width: 501px )
   .hotel
     &-description
       width: 55%
 @media ( max-width: 456px )
+  .navbar
+    &-menu 
+      max-width: 285px 
+  .search__input 
+    width: 245px   
   .hotel
     &-description
       width: 67%
@@ -300,7 +357,7 @@
   .footer
     &__contact
       &-form
-        max-width: 300px    
+        max-width: 300px
 @media ( max-width: 320px )
   .container
     max-width: 576px
@@ -308,8 +365,10 @@
   .navbar
     &-top
       padding-top: 23px
-      padding-bottom: 28px
+      padding-bottom: 30px
       align-items: end
+      
+   
   .breadcrumb
     &-list
       padding-bottom: 16px
@@ -400,10 +459,10 @@
       position: absolute
       margin-top: 200px
     &__message
-      margin-bottom: 45px 
+      margin-bottom: 45px
     &__social
       &-network
         flex-wrap: wrap
     &__title
-      &--inline  
-        margin-bottom: 20px     
+      &--inline
+        margin-bottom: 20px
