--- a/css/style.css
+++ b/css/style.css
@@ -417,6 +417,10 @@ template {
   font-weight: 700;
 }
 
+.navbar-menu__item--mobile_visible {
+  display: none;
+}
+
 .logo {
   width: 177px;
 }
@@ -478,6 +482,10 @@ template {
   font-size: 14px;
   line-height: 18px;
   color: #333333;
+}
+
+.navbar__user--mobile_visible, .navbar__search--mobile_visible {
+  display: none;
 }
 
 .breadcrumb-list {
@@ -1300,6 +1308,8 @@ template {
 .footer__text {
   color: #BDBDBD;
   margin-bottom: 22px;
+  font-size: 14px;
+  line-height: 160%;
 }
 
 .footer__link {
@@ -1318,6 +1328,38 @@ template {
       flex-basis: 49%;
 }
 
+.footer__input::-webkit-input-placeholder {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #BDBDBD;
+}
+
+.footer__input:-ms-input-placeholder {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #BDBDBD;
+}
+
+.footer__input::-ms-input-placeholder {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #BDBDBD;
+}
+
+.footer__input::placeholder {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #BDBDBD;
+}
+
 .footer__message {
   max-width: 539px;
   height: 123px;
@@ -1328,6 +1370,38 @@ template {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
   margin-bottom: 22px;
+}
+
+.footer__message::-webkit-input-placeholder {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #BDBDBD;
+}
+
+.footer__message:-ms-input-placeholder {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #BDBDBD;
+}
+
+.footer__message::-ms-input-placeholder {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #BDBDBD;
+}
+
+.footer__message::placeholder {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #BDBDBD;
 }
 
 .footer__button {
@@ -1352,6 +1426,11 @@ template {
   color: #BDBDBD;
 }
 
+.footer__tel {
+  text-decoration: none;
+  color: inherit;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
@@ -1368,6 +1447,14 @@ template {
   .card {
     width: 230px;
     height: 230px;
+  }
+  .footer-wrapper {
+    -ms-grid-columns: 20% 20%;
+        grid-template-columns: 20% 20%;
+    grid-auto-rows: none;
+  }
+  .footer__contact-details {
+    grid-column: span 3;
   }
   .footer__contact-form {
     grid-column: span 3;
@@ -1492,8 +1579,9 @@ template {
     height: 255px;
   }
   .footer-wrapper {
-    -ms-grid-columns: (1fr)[6];
-        grid-template-columns: repeat(6, 1fr);
+    -ms-grid-columns: 5% 22% 40%;
+        grid-template-columns: 5% 22% 40%;
+    grid-gap: 9px;
     grid-row-gap: 40px;
   }
   .footer__input {
@@ -1540,12 +1628,72 @@ template {
 }
 
 @media (max-width: 767px) {
+  body {
+    padding-top: 70px;
+  }
   .container {
-    max-width: 576px;
+    max-width: 700px;
     width: 92%;
   }
-  .navbar-menu, .navbar__search, .navbar__user {
+  .navbar--mobile_fixed {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    z-index: 99;
+  }
+  .navbar__user, .navbar__search {
+    margin-right: 0px;
+  }
+  .navbar__user--mobile_hidden, .navbar__search--mobile_hidden {
     display: none;
+  }
+  .navbar__user--mobile_visible, .navbar__search--mobile_visible {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .navbar__user {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .navbar-bottom {
+    display: none;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 70px;
+    bottom: 0;
+    padding-top: 30px;
+  }
+  .navbar-bottom--visible {
+    display: block;
+  }
+  .navbar-menu {
+    max-width: 400px;
+    margin: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .navbar-menu__item {
+    margin-bottom: 20px;
+  }
+  .navbar-menu__item--mobile {
+    margin-right: 0px;
+  }
+  .navbar-menu__item--mobile_visible {
+    display: block;
+    margin-bottom: 27px;
+  }
+  .navbar-menu__item--mt12 {
+    margin-top: 12px;
   }
   .menu-button {
     display: -webkit-box;
@@ -1573,6 +1721,11 @@ template {
     height: 1px;
     margin-top: -2px;
     background-color: #333333;
+  }
+  .user__name--light {
+    color: #fff;
+    margin-left: 0;
+    margin-top: 10px;
   }
   .hotel-description {
     width: 85%;
@@ -1672,45 +1825,6 @@ template {
     height: 255px;
   }
   .footer__input {
-    -ms-flex-preferred-size: 49%;
-        flex-basis: 49%;
-  }
-  .footer__contact-form {
-    grid-column: span 6;
-  }
-}
-
-@media (max-width: 576px) {
-  .logo {
-    width: 99px;
-  }
-  .hotel-description {
-    width: 50%;
-  }
-  .hotel-slider {
-    height: 250px;
-  }
-  .hotel__slider {
-    margin-bottom: 20px;
-  }
-  .newsletter {
-    padding: 0px;
-  }
-  .newsletter__title {
-    margin-bottom: 37px;
-  }
-  .subscribe {
-    width: 100%;
-  }
-  .activities-wrapper {
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-  }
-  .card {
-    width: 70%;
-  }
-  .footer__input {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
@@ -1753,12 +1867,48 @@ template {
     grid-row: 6;
     -ms-grid-column: 1;
     grid-column: 1;
+    max-width: 281px;
   }
   .footer__contact-form {
     -ms-grid-row: 7;
     grid-row: 7;
     -ms-grid-column: 1;
     grid-column: 1;
+  }
+  .footer__item--wid {
+    max-width: 268px;
+  }
+}
+
+@media (max-width: 576px) {
+  .logo {
+    width: 99px;
+  }
+  .hotel-description {
+    width: 50%;
+  }
+  .hotel-slider {
+    height: 250px;
+  }
+  .hotel__slider {
+    margin-bottom: 20px;
+  }
+  .newsletter {
+    padding: 0px;
+  }
+  .newsletter__title {
+    margin-bottom: 37px;
+  }
+  .subscribe {
+    width: 100%;
+  }
+  .activities-wrapper {
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  .card {
+    width: 70%;
   }
 }
 
@@ -1769,6 +1919,12 @@ template {
 }
 
 @media (max-width: 456px) {
+  .navbar-menu {
+    max-width: 285px;
+  }
+  .search__input {
+    width: 245px;
+  }
   .hotel-description {
     width: 67%;
   }
@@ -1793,7 +1949,7 @@ template {
   }
   .navbar-top {
     padding-top: 23px;
-    padding-bottom: 28px;
+    padding-bottom: 30px;
     -webkit-box-align: end;
         -ms-flex-align: end;
             align-items: end;
