--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -28,6 +28,11 @@
       font-size: 14px
       line-height: 18px
       font-weight: 700
+    &__item
+      &--mobile
+        &_visible
+          display: none  
+        
 .logo
   width: 177px      
 .search
@@ -70,3 +75,8 @@
     font-size: 14px
     line-height: 18px
     color: $text-color
+.navbar
+  &__user, &__search
+      &--mobile  
+        &_visible
+          display: none 
