--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -36,8 +36,8 @@
     visibility: hidden
     opacity: 0
     transition: opacity 0.2s
-
-    
+    &::-webkit-scrollbar 
+      width: 0
     &--visible
       visibility: visible
       opacity: 1
