--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -121,7 +121,8 @@
       grid-gap: 9px
       grid-row-gap: 40px
     &__input
-      flex-basis: 100%
+      &-group
+        flex-basis: 100%
     &__logo
       grid-row: 1 / 2
       grid-column: span 2
@@ -288,7 +289,8 @@
     height: 255px
   .footer
     &__input
-      flex-basis: 100%
+      &-group
+        flex-basis: 100%
     &-wrapper
       grid-template-columns: 1fr
     &__logo
