--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -39,4 +39,8 @@ img
 .homepage
   &__button
     margin-top: 20px
+.invalid
+  color: $primary
+  border-bottom: 1px solid $primary    
+  font-size: 11px
  
