--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -75,7 +75,6 @@
     text-decoration: none
     color: inherit  
   &__input
-    margin-bottom: 15px
     flex-basis: 49%
     &::placeholder
       font-style: normal
@@ -83,6 +82,13 @@
       font-size: 12px
       line-height: 15px
       color: #BDBDBD
+  &__input
+    margin-bottom: -6px
+    width: 100%
+    &-group
+     margin-bottom: 15px
+     flex-basis: 49%     
+     
   &__message
     max-width: 539px
     height: 123px
