--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,12 @@ img {
   margin-top: 20px;
 }
 
+.invalid {
+  color: #EC1F46;
+  border-bottom: 1px solid #EC1F46;
+  font-size: 11px;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -1355,7 +1361,6 @@ template {
 }
 
 .footer__input {
-  margin-bottom: 15px;
   -ms-flex-preferred-size: 49%;
       flex-basis: 49%;
 }
@@ -1390,6 +1395,17 @@ template {
   font-size: 12px;
   line-height: 15px;
   color: #BDBDBD;
+}
+
+.footer__input {
+  margin-bottom: -6px;
+  width: 100%;
+}
+
+.footer__input-group {
+  margin-bottom: 15px;
+  -ms-flex-preferred-size: 49%;
+      flex-basis: 49%;
 }
 
 .footer__message {
@@ -1517,13 +1533,25 @@ template {
 
 .modal__input {
   width: 100%;
-  margin-bottom: 15px;
+  margin-top: 15px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
 }
 
 .modal__message {
   width: 100%;
   min-height: 123px;
-  margin-bottom: 15px;
+  margin-top: 15px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.modal__button {
+  margin-top: 15px;
 }
 
 .modal__form {
@@ -1705,7 +1733,7 @@ template {
     grid-gap: 9px;
     grid-row-gap: 40px;
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
@@ -1950,7 +1978,7 @@ template {
     width: 49%;
     height: 255px;
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
