--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -52,11 +52,21 @@
     cursor: pointer
   &__input
     width: 100%
-    margin-bottom: 15px
+    margin-top: 15px
+    font-style: normal
+    font-weight: 400
+    font-size: 12px
+    line-height: 15px
   &__message
     width: 100%
     min-height: 123px
-    margin-bottom: 15px
+    margin-top: 15px
+    font-style: normal
+    font-weight: 400
+    font-size: 12px
+    line-height: 15px
+  &__button
+    margin-top: 15px  
   &__form
     display: flex
     align-items: center
