--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -86,8 +86,8 @@
     margin-bottom: -6px
     width: 100%
     &-group
-     margin-bottom: 15px
-     flex-basis: 49%     
+     flex-basis: 49% 
+     height: 70px    
      
   &__message
     max-width: 539px
