--- a/css/style.css
+++ b/css/style.css
@@ -1403,9 +1403,9 @@ template {
 }
 
 .footer__input-group {
-  margin-bottom: 15px;
   -ms-flex-preferred-size: 49%;
       flex-basis: 49%;
+  height: 70px;
 }
 
 .footer__message {
@@ -1533,7 +1533,12 @@ template {
 
 .modal__input {
   width: 100%;
-  margin-top: 15px;
+  margin-bottom: -3px;
+}
+
+.modal__input--group {
+  width: 100%;
+  height: 70px;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -1543,7 +1548,6 @@ template {
 .modal__message {
   width: 100%;
   min-height: 123px;
-  margin-top: 15px;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
