--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -52,15 +52,17 @@
     cursor: pointer
   &__input
     width: 100%
-    margin-top: 15px
-    font-style: normal
-    font-weight: 400
-    font-size: 12px
-    line-height: 15px
+    margin-bottom: -3px
+    &--group
+      width: 100%
+      height: 70px
+      font-style: normal
+      font-weight: 400
+      font-size: 12px
+      line-height: 15px
   &__message
     width: 100%
     min-height: 123px
-    margin-top: 15px
     font-style: normal
     font-weight: 400
     font-size: 12px
