--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -52,9 +52,10 @@
       &__link
         font-size: 12px
         line-height: 15px
+    
   .hotel
     padding-top: 5px
-    padding-bottom: 61px
+    padding-bottom: 58px
     &-grid
       flex-direction: column
     &-slider
@@ -68,7 +69,6 @@
       &__offer
         margin-left: 11px
       &__rating
-        margin-top: 9px
         margin-right: -1px
   .booking
     width: 340px
@@ -92,9 +92,9 @@
           left: 2px
         &--prev
           right: -1px
-  .breadcrumb-list
+  .breadcrumb-list 
     padding-top: 20px
-    padding-bottom: 28px
+    padding-bottom: 39px    
   .newsletter
     padding: 91px 0px 93px 0px
     &-title
@@ -112,26 +112,39 @@
       flex-wrap: wrap
     &__card
       margin-bottom: 20px
+  .activities
+    &__title   
+      margin-top: 31px
+  .card
+    &__title 
+      max-width: 205px
+      margin-bottom: 18px
+  .activities 
+    padding: 0px 0px 50px 0px        
   .card
     width: 340px
     height: 255px
   .footer
+    padding-top: 72px
     &-wrapper
-      grid-template-columns: 5% 22% 40%
+      grid-template-columns: 5% 21% 39%
       grid-gap: 9px
-      grid-row-gap: 40px
+      grid-row-gap: 49px
     &__input
       &-group
-        flex-basis: 100%
+        flex-basis: 47%
     &__logo
       grid-row: 1 / 2
       grid-column: span 2
+      width: 50%
 
     &__social
       &-network
         grid-row: 1 / 2
         grid-column: span 4
         align-self: center
+        margin-top: 11px
+        margin-left: -13px
     &__categories
       grid-row: 2 / 3
       grid-column: span 2
@@ -143,9 +156,12 @@
       &-details
         grid-column: span 5
         grid-row: 3
+        margin-top: 14px
+        margin-left: -1px
       &-form
         grid-column: span 5
         grid-row: 4
+        margin-top: -4px
 
 @media ( max-width: 767px )
   body
@@ -456,13 +472,17 @@
       line-height: 23px
       margin-bottom: 36px
     &__card
-      margin-bottom: 20px
+      margin-bottom: 22px
   .reviews
     padding-bottom: 9px
   .card
     width: 100%
     &__title
-      max-width: 145px
+      max-width: 205px
+      margin-bottom: 19px
+      &--mb10
+        margin-bottom: 17px
+        margin-top: 122px
   .footer
     &__contact
       &-form
@@ -483,3 +503,9 @@
     &__dialog
       width: 90%
       padding: 33px 16px
+  .activities
+    &__card
+      &--order
+        order: -2
+      &--order1
+        order: -1
