--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -5,7 +5,7 @@
   padding-bottom: 46px
   &-wrapper
     display: grid
-    grid-template-columns: repeat(4, minmax(min-content, 1fr) )
+    grid-template-columns: 24% 23.7% 29.4%
     grid-gap: 20px
     grid-auto-rows: minmax(40px, min-content)
     align-items: start
@@ -27,9 +27,11 @@
       align-items: start
       grid-row: 2 / 4   
       grid-column: span 2
+      margin-top: 4px
   &__contact
     &-details
       grid-column: span 2   
+      margin: 12px 0px 0px -4px
     &-form
       grid-column: span 2
   &__form
@@ -42,6 +44,8 @@
     padding: 0
     margin: 0
     list-style: none
+    &--list
+      margin: 0px 0px 0px 6px
   &__title
     font-style: normal
     font-weight: 700
@@ -51,8 +55,10 @@
     text-transform: uppercase
     &--inline
       margin: 0px 43px 0px 0px
+    &--mb-4
+      margin-bottom: 25px  
     &--mb-3
-      margin-bottom: 34px  
+      margin-bottom: 34px    
   &__item
     display: flex
     align-items: flex-start
@@ -62,7 +68,7 @@
     line-height: 160%
     color: $footer-text-color
     &--mb-2
-      margin-bottom: 25px
+      margin-bottom: 18px
   &__icon
     &-wrapper
       min-width: 40px
@@ -86,8 +92,8 @@
     margin-bottom: -6px
     width: 100%
     &-group
-     flex-basis: 49% 
-     height: 70px    
+     flex-basis: 47.2% 
+     height: 66px    
      
   &__message
     max-width: 539px
