--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -120,3 +120,18 @@
   &__tel
     text-decoration: none
     color: inherit    
+  &__pay
+    padding-top: 122px
+    display: flex  
+    justify-content: flex-end
+    &-info
+      display: flex
+      justify-content: space-between 
+      align-items: center
+      width: 696px
+      font-style: normal
+      font-weight: 400
+      font-size: 12px
+      line-height: 15px
+    &-card
+       
