--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -27,9 +27,10 @@
     left: 50%
     top: 50%
     max-width: 478px
+    height: 487px
     padding: 33px 88px
     background-color: $dark
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -51%)
     color: $light
     border-radius: 8px
     z-index: 101
@@ -53,9 +54,9 @@
   &__input
     width: 100%
     margin-bottom: -3px
-    &--group
+    &-group
       width: 100%
-      height: 70px
+      height: 65px
       font-style: normal
       font-weight: 400
       font-size: 12px
@@ -68,7 +69,7 @@
     font-size: 12px
     line-height: 15px
   &__button
-    margin-top: 15px  
+    margin-top: 16px  
   &__form
     display: flex
     align-items: center
@@ -80,3 +81,4 @@
     font-size: 12px
     line-height: 15px
     color: $footer-text-color
+    margin-top: 16px
