--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,10 @@ img {
   font-size: 11px;
 }
 
+.maps5 {
+  width: 100%;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -938,10 +942,15 @@ template {
   text-transform: uppercase;
 }
 
+.newsletter__subscribe {
+  height: 70px;
+}
+
 .subscribe {
+  margin-top: 22px;
   position: relative;
   width: 350px;
-  height: 55px;
+  height: 66px;
   border-radius: 4px;
   overflow: hidden;
 }
@@ -952,7 +961,7 @@ template {
   height: 100%;
   border: none;
   padding-left: 33px;
-  padding-right: 75px;
+  padding-right: 60px;
   font-style: normal;
   font-weight: 300;
   font-size: 14px;
@@ -964,7 +973,7 @@ template {
   min-width: 65px;
   right: 0;
   top: 0;
-  height: 100%;
+  height: 51px;
   border: none;
   background-color: #EC1F46;
   color: #fff;
@@ -973,6 +982,10 @@ template {
   font-size: 12px;
   line-height: 15px;
   cursor: pointer;
+}
+
+.modal__input--subscribe {
+  padding-right: 0;
 }
 
 .reviews {
@@ -1474,6 +1487,33 @@ template {
   color: inherit;
 }
 
+.footer__pay {
+  padding-top: 122px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.footer__pay-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 696px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+}
+
 .modal__overlay {
   position: fixed;
   left: 0;
@@ -1508,10 +1548,11 @@ template {
   left: 50%;
   top: 50%;
   max-width: 478px;
+  height: 487px;
   padding: 33px 88px;
   background-color: #0A223D;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -51%);
+          transform: translate(-50%, -51%);
   color: #fff;
   border-radius: 8px;
   z-index: 101;
@@ -1545,9 +1586,9 @@ template {
   margin-bottom: -3px;
 }
 
-.modal__input--group {
+.modal__input-group {
   width: 100%;
-  height: 70px;
+  height: 65px;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -1564,7 +1605,7 @@ template {
 }
 
 .modal__button {
-  margin-top: 15px;
+  margin-top: 16px;
 }
 
 .modal__form {
@@ -1587,6 +1628,7 @@ template {
   font-size: 12px;
   line-height: 15px;
   color: #BDBDBD;
+  margin-top: 16px;
 }
 
 @media (max-width: 1200px) {
@@ -1616,6 +1658,14 @@ template {
   }
   .footer__contact-form {
     grid-column: span 3;
+  }
+  .footer__pay {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer__pay-info {
+    width: 100%;
   }
 }
 
@@ -2095,6 +2145,22 @@ template {
   .card {
     width: 70%;
   }
+  .footer__pay {
+    padding-top: 30px;
+  }
+  .footer__pay-info {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  .footer__pay-card {
+    margin-bottom: 10px;
+  }
 }
 
 @media (max-width: 501px) {
@@ -2174,10 +2240,13 @@ template {
     min-height: 400px;
   }
   .booking {
-    padding: 29px 22px 26px 24px;
+    padding: 28px 21px 23px 23px;
   }
   .booking__number {
     margin-right: 3px;
+  }
+  .booking__button {
+    padding: 3px 7px 6px 6px;
   }
   .map {
     height: 173px;
@@ -2203,7 +2272,7 @@ template {
     line-height: 38px;
   }
   .newsletter__title {
-    margin-top: -5px;
+    margin-top: -9px;
     margin-bottom: 37px;
   }
   .subscribe__input {
@@ -2230,6 +2299,7 @@ template {
   }
   .activities {
     padding-top: 0px;
+    padding-bottom: 42px;
   }
   .activities__title {
     font-size: 18px;
@@ -2237,7 +2307,7 @@ template {
     margin-bottom: 36px;
   }
   .activities__card {
-    margin-bottom: 22px;
+    margin-bottom: 19px;
   }
   .reviews {
     padding-bottom: 9px;
@@ -2247,11 +2317,20 @@ template {
   }
   .card__title {
     max-width: 205px;
-    margin-bottom: 19px;
+    margin-bottom: 17px;
   }
   .card__title--mb10 {
-    margin-bottom: 17px;
-    margin-top: 122px;
+    margin-bottom: 18px;
+    margin-top: 119px;
+  }
+  .card__button {
+    padding: 7px 20px;
+  }
+  .footer {
+    padding-top: 68px;
+  }
+  .footer-wrapper {
+    grid-row-gap: 29px;
   }
   .footer__contact-form {
     max-width: 281px;
@@ -2259,7 +2338,14 @@ template {
   }
   .footer__info {
     position: absolute;
-    margin-top: 200px;
+    margin-top: 203px;
+  }
+  .footer__item--link {
+    line-height: 29px;
+    height: 22px;
+  }
+  .footer__item--mb-2 {
+    margin-bottom: 22px;
   }
   .footer__message {
     margin-bottom: 45px;
@@ -2267,9 +2353,47 @@ template {
   .footer__social-network {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-left: 0px;
+    margin-top: 9px;
+  }
+  .footer__social-links {
+    margin-left: 2px;
   }
   .footer__title--inline {
+    margin-bottom: 22px;
+  }
+  .footer__title--mb-4 {
+    margin-bottom: 26px;
+  }
+  .footer__title--mb-3 {
+    margin-top: 13px;
+    margin-left: -2px;
+    margin-bottom: 14px;
+  }
+  .footer__text {
     margin-bottom: 20px;
+  }
+  .footer__logo {
+    width: 96px;
+  }
+  .footer__categories {
+    -ms-grid-row: 5;
+    grid-row: 5;
+  }
+  .footer__legal {
+    -ms-grid-row: 3;
+    grid-row: 3;
+  }
+  .footer__additional {
+    -ms-grid-row: 4;
+    grid-row: 4;
+  }
+  .footer__icon-wrapper {
+    min-width: 25px;
   }
   .modal__dialog {
     width: 90%;
@@ -2284,6 +2408,7 @@ template {
     -webkit-box-ordinal-group: 0;
         -ms-flex-order: -1;
             order: -1;
+    margin-bottom: 29px;
   }
 }
 /*# sourceMappingURL=style.css.map */
