--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -35,10 +35,13 @@
       font-size: 36px
       line-height: 45px
       text-transform: uppercase
+  &__subscribe
+    height: 70px      
 .subscribe
+  margin-top: 22px
   position: relative
   width: 350px
-  height: 55px
+  height: 66px
   border-radius: 4px
   overflow: hidden
   &__input
@@ -47,7 +50,7 @@
     height: 100%
     border: none
     padding-left: 33px
-    padding-right: 75px
+    padding-right: 60px
     font-style: normal
     font-weight: 300
     font-size: 14px
@@ -57,7 +60,7 @@
     min-width: 65px
     right: 0
     top: 0
-    height: 100%
+    height: 51px
     border: none
     background-color: $primary
     color: $light
@@ -66,3 +69,7 @@
     font-size: 12px
     line-height: 15px
     cursor: pointer
+.modal
+  &__input
+    &--subscribe
+      padding-right: 0
