--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -220,7 +220,10 @@
             margin-bottom: 27px
         &--mt12
           margin-top: 12px
-
+  .subscribe
+    &__input 
+      padding-left: 0px
+      padding-right: 0px
   .menu
     &-button
       display: flex
