--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -69,7 +69,7 @@
     font-size: 12px
     line-height: 15px
     cursor: pointer
-.modal
-  &__input
-    &--subscribe
-      padding-right: 0
+.input
+  &-subscribe
+    padding-right: 0
+    width: 100%
