--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -183,9 +183,19 @@
     border: none
     color: $light
     cursor: pointer
-.map
+.maps
   width: 347px
   height: 213px
   background-color: #0f0e0e  
   border-radius: 10px
   overflow: hidden
+.map
+  width: 347px
+  height: 340px
+  padding: 0
+  background-image: url(../img/mask-image.jpg)
+  background-position: center center
+.maps5
+  width: 100%
+
+    
