--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -80,8 +80,10 @@
     &__pricetag
       line-height: 30px
   .map
-    width: 340px
-    height: 210px
+    width: 100% 
+    height: 100% 
+  .maps5
+    width: 100%   
   .reviews
     &-slider
       &__item
@@ -273,8 +275,13 @@
       min-height: 450px
   .booking
     width: 100%
-  .map
+  .maps
     width: 100%
+  .map
+    width: 100% 
+    height: 100% 
+  .maps5
+    width: 100%  
   .newsletter
     padding: 0
     &-wrapper
