--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -36,6 +36,10 @@ img
   border: none
   border-radius: 4px 
   cursor: pointer
+.buttonh  
+  &:hover 
+    background: #970328
+    color: #ffffff
 .homepage
   &__button
     margin-top: 20px
@@ -43,5 +47,13 @@ img
   color: $primary
   border-bottom: 1px solid $primary    
   font-size: 11px
-.maps5
+.map
   width: 100% 
+.links
+  height: 20px
+  &:hover
+   background-color: $primary 
+   border-radius: 50% 
+.link
+  &:hover
+    color: $primary
