--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -38,7 +38,7 @@
   &__subscribe
     height: 70px      
 .subscribe
-  margin-top: 22px
+  margin-top: 11px
   position: relative
   width: 350px
   height: 66px
@@ -49,7 +49,7 @@
     width: 100%
     height: 100%
     border: none
-    padding-left: 33px
+    
     padding-right: 60px
     font-style: normal
     font-weight: 300
@@ -60,7 +60,7 @@
     min-width: 65px
     right: 0
     top: 0
-    height: 51px
+    height: 55px
     border: none
     background-color: $primary
     color: $light
@@ -69,7 +69,9 @@
     font-size: 12px
     line-height: 15px
     cursor: pointer
+    border-radius: 0px 4px 4px 0px
 .input
   &-subscribe
     padding-right: 0
     width: 100%
+    height: 55px
